# stack-emu

./: .gitignore  Makefile  run.sh  test.sh
common/: defines.hpp  iterators.hpp
deque/: deque.cpp  deque.hpp
long_arithmetic/arithmetic/: CMakeLists.txt  arithmetic.cpp  arithmetic.hpp  arithmetic_32.cpp  arithmetic_32.hpp  arithmetic_operators.cpp  arithmetic_operators_32.cpp
long_arithmetic/fft/: fft.cpp  fft.hpp
src/: command.hpp  commands.txt  commands_40fib.txt  commands_40fib_for.txt  commands_pi.txt  commands_recursive_fib.txt  compile.cpp  emulate.cpp  parser.cpp  parser.hpp  square_equation.valang  stack_emu.cpp  stack_emu.hpp
stack/: stack.cpp  stack.hpp
test/: test.cpp  test_system.cpp  test_system.hpp
vector/: vector.cpp  vector.hpp
